// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`startup output prints DigitalPuddle route guidance for the built CommonJS CLI 1`] = `
"{"event":"digitalpuddle.manifest.validated","entryCount":27}
DigitalPuddle simulation server started at http://localhost:<PORT>
Visit http://localhost:<PORT>/simulation to view all available routes.
"
`;

exports[`startup output prints DigitalPuddle route guidance for the TypeScript example 1`] = `
"{"event":"digitalpuddle.manifest.validated","entryCount":27}
DigitalPuddle baseline server started at http://localhost:<PORT>
Visit http://localhost:<PORT>/simulation to view all available routes.
"
`;
